Fix interpolation of the rotate CSS property https://bugs.webkit.org/show_bug.cgi?id=224730

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark 123 WPT progressions.

* web-platform-tests/css/css-transforms/animation/rotate-composition-expected.txt:
* web-platform-tests/css/css-transforms/animation/rotate-interpolation-expected.txt:
* web-platform-tests/css/css-transforms/animation/transform-interpolation-001-expected.txt:
* web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
* web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:
* web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:

Source/WebCore:

Implement the CSS Transforms spec about animating the rotateZ() function
for the simplified case where only the angle is interpolated.

* platform/graphics/transforms/RotateTransformOperation.cpp:
(WebCore::RotateTransformOperation::blend):


Canonical link: https://commits.webkit.org/236713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276231 268f45cc-cd09-0410-ab3c-d52691b4dbfc